Updated code for entry

--- a/HTML & CSS/INF103B_de_Ridder_Bryan/index.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/index.html
@@ -1,96 +1,88 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tide</title>
+    <title>Tide | Your festival holiday</title>
     <link rel="stylesheet" href="css/basisstijlblad.css">
     <link rel="icon" href="images/icons/icon.png">
 
     <!-- External Fonts: -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amaranth:400,700">
 </head>
 <body>
 
-<header>
-    <!-- Navigation menu: -->
-    <nav>
-        <ul>
-            <li class="firstitem"><a class="active" href="./index.html">Home</a></li>
-            <li><a class="hoverable" href="subpages/lineup.html">Line-up &#9662;</a>
-                <!-- Dropdown menu: -->
-                <ul>
-                    <li><a class="hoverable" href="subpages/lineup.html#wednesday">Wednesday 13th</a></li>
-                    <li><a class="hoverable" href="subpages/lineup.html#thursday">Thursday 14th</a></li>
-                    <li><a class="hoverable" href="subpages/lineup.html#friday">Friday 15th</a></li>
-                </ul>
-            </li>
-            <li><a class="hoverable" href="subpages/ticketinfo.html">Tickets &#9662;</a>
-                <!-- Dropdown menu: -->
-                <ul>
-                    <li><a class="hoverable" href="subpages/ticketinfo.html">Ticket information</a></li>
-                    <li><a class="hoverable" href="buytickets.html">Buy tickets</a></li>
-                </ul>
-            </li>
-            <li><a class="hoverable" href="subpages/practicalinfo.html">Practical information</a></li>
-            <li><a class="hoverable" href="subpages/fotos.html">Photos</a></li>
-            <li class="navlogo"><a class="alogo" href="./index.html">
-                <img src="images/icons/logo_magenta_xs.png" alt="logo"></a></li>
-        </ul>
-    </nav>
+<!-- Navigation menu: -->
+<nav>
+    <ul>
+        <li class="firstitem"><a class="active" href="./index.html">Home</a></li>
+        <li><a class="hoverable" href="subpages/lineup.html">Line-up &#9662;</a>
+            <!-- Dropdown menu: -->
+            <ul>
+                <li><a class="hoverable" href="subpages/lineup.html#wednesday">Wednesday 13th</a></li>
+                <li><a class="hoverable" href="subpages/lineup.html#thursday">Thursday 14th</a></li>
+                <li><a class="hoverable" href="subpages/lineup.html#friday">Friday 15th</a></li>
+            </ul>
+        </li>
+        <li><a class="hoverable" href="subpages/ticketinfo.html">Tickets &#9662;</a>
+            <!-- Dropdown menu: -->
+            <ul>
+                <li><a class="hoverable" href="subpages/ticketinfo.html">Ticket information</a></li>
+                <li><a class="hoverable" href="buytickets.html">Buy tickets</a></li>
+            </ul>
+        </li>
+        <li><a class="hoverable" href="subpages/practicalinfo.html">Practical information</a></li>
+        <li><a class="hoverable" href="subpages/fotos.html">Photos</a></li>
+        <li class="navlogo"><a class="alogo" href="./index.html">
+            <img src="images/icons/logo_magenta_xs.png" alt="logo"></a></li>
+    </ul>
+</nav>
 
-    <!-- Background banner, title text and buttons: -->
-    <div class="indexbanner">
-        <div class="logo"><img src="images/icons/logo_magenta.png" alt="logo"></div>
-        <h1 class="intro">Tide is your festival holiday with music drinks and more...</h1>
-        <p class="slogan">Enjoy your stay at the renowned Coast of Freedom</p>
+<!-- Banner, intro text and buttons: -->
+<header class="indexbackgroundimage">
+    <div class="logo"><img src="images/icons/logo_magenta.png" alt="logo"></div>
+    <h1 class="intro">Tide is your festival holiday with music drinks and more...</h1>
+    <p class="subintro">Enjoy your stay at the renowned Coast of Freedom</p>
 
-        <!-- Buttons -->
-        <button class="button button1">Buy your tickets!</button>
-        <a href="./subpages/lineup.html">
-            <button class="button button2">View our line-up!</button>
-        </a>
-    </div>
-
+    <!-- Buttons -->
+    <button class="button button1">Buy your tickets!</button>
+    <a href="./subpages/lineup.html">
+        <button class="button button2">View our line-up!</button>
+    </a>
 </header>
 
 <article>
-    <h2>Tide wins IGN Festival of the year award!</h2>
-    <h5>Written by <span class="lightblue">Bryan de Ridder</span>.</h5>
-    <h3>Preparing for the trip</h3>
-    <p> Door het creationisme wordt veel gewerkt met het begrip ‘Baramin’. Dat klinkt heel indrukwekkend, maar wat houdt
-        dat precies in. Daarnaast is de vraag, hoe zit het met de ark van Noach? ‘Van alle dieren moet je er twee in de
-        ark brengen, om er voor te zorgen, dat die met jou in leven blijven. Een mannetje en wijfje moeten het zijn. Van
-        alle soorten vogels, van alle soorten vee en van alles wat op de aardbodem rondkruipt, zullen er twee naar je
-        toekomen; die zullen in leven blijven’ (Gen. 6 : 20). En in Gen. 7 : 2 en 3 staat zelfs: ‘Van alle reine dieren
-        zeven mannetjes en hun wijfjes, van de onreine twee, een mannetje en wijfje, en van de vogels weer zeven
-        mannetjes en wijfjes, om hun voortbestaan op aarde veilig te stellen.’ Je kunt je afvragen, past dat allemaal in
-        de ark, als er ook nog een hoeveelheid eten meegenomen moet worden? Wat wordt dan verstaan onder ‘soort’. Zijn
-        dat alle huidige biologische soorten, zoals diverse soorten katachtigen, hondachtigen? Of worden daar families
-        mee bedoeld. Het biologische soortbegrip was in de oudheid nog niet bekend. Creationisten werken nogal eens met
-        het begrip ‘baramin’, een samenstelling van twee woorden afkomstig uit het Hebreeuws: ‘bara’ is scheppen, ‘min’
-        is ‘aard’, afkomstig uit Genesis 1: God schiep alle dieren naar hun aard. Op de site https://arkencounter.com.
-        wordt het begrip ‘baramin’ breder omschreven, dan het biologische soort-begrip: Op de site staat het volgende te
-        lezen: Door het creationisme wordt veel gewerkt met het begrip ‘Baramin’.
-    </p>
-    <h2>Tide wins IGN Festival of the year award!</h2>
-    <h5>Written by <span class="lightblue">Bryan de Ridder</span>.</h5>
-    <h3>Preparing for the trip</h3>
-    <p> Door het creationisme wordt veel gewerkt met het begrip ‘Baramin’. Dat klinkt heel indrukwekkend, maar wat houdt
-        dat precies in. Daarnaast is de vraag, hoe zit het met de ark van Noach? ‘Van alle dieren moet je er twee in de
-        ark brengen, om er voor te zorgen, dat die met jou in leven blijven. Een mannetje en wijfje moeten het zijn. Van
-        alle soorten vogels, van alle soorten vee en van alles wat op de aardbodem rondkruipt, zullen er twee naar je
-        toekomen; die zullen in leven blijven’ (Gen. 6 : 20). En in Gen. 7 : 2 en 3 staat zelfs: ‘Van alle reine dieren
-        zeven mannetjes en hun wijfjes, van de onreine twee, een mannetje en wijfje, en van de vogels weer zeven
-        mannetjes en wijfjes, om hun voortbestaan op aarde veilig te stellen.’ Je kunt je afvragen, past dat allemaal in
-        de ark, als er ook nog een hoeveelheid eten meegenomen moet worden? Wat wordt dan verstaan onder ‘soort’. Zijn
-        dat alle huidige biologische soorten, zoals diverse soorten katachtigen, hondachtigen? Of worden daar families
-        mee bedoeld. Het biologische soortbegrip was in de oudheid nog niet bekend. Creationisten werken nogal eens met
-        het begrip ‘baramin’, een samenstelling van twee woorden afkomstig uit het Hebreeuws: ‘bara’ is scheppen, ‘min’
-        is ‘aard’, afkomstig uit Genesis 1: God schiep alle dieren naar hun aard. Op de site https://arkencounter.com.
-        wordt het begrip ‘baramin’ breder omschreven, dan het biologische soort-begrip: Op de site staat het volgende te
-        lezen: Door het creationisme wordt veel gewerkt met het begrip ‘Baramin’.
-    </p>
+    <header>
+        <h2>Latest news</h2>
+    </header>
+    <section>
+        <h3>Tide wins best European Festival of 2016!</h3>
+        <h4>13 January 2016</h4>
+        <p> The winners of the 2016 European Festival Awards were announced at a gala show in Groningen, The Netherlands
+            last night. 'Tide' managed to finish in first place.</p>
+        <p> Presented in association with Yourope (the European Festival Association) and marking the opening of the
+            annual four-day Eurosonic Noorderslag event, the European Festival Awards celebrate the successes of
+            Europe’s music festival industry. Decided by a combination of public vote and industry juries, the Awards
+            are the only pan-European body solely dedicated to recognising the contributions and achievements of the
+            event organisers and performing artists that generate billions of Euros for local economies and brighten up
+            the summer for tens of millions of festival-goers each year. The 2016 European Festival Awards featured over
+            350 festivals from 50 different European countries, with over 800,000 votes cast in total. This years award
+            goes to 'Tide', for an outstanding lineup and a great visual story telling performance. Runner up 'Sziget
+            Festival', responded in disgrace of the voting system. Thank you all for voting for Tide this
+            year as the best European festival.</p>
+    </section>
+    <section>
+        <h3>Tide attracted 76.000 visitors in three days!</h3>
+        <h4>25 December 2015</h4>
+        <p>The first three nights of our festival attracted more than 76,000 visitors! Meanwhile 10-day-pass-tickets are
+            sold out, one-day tickets are still available. Friday night, Belgian band Hooverphonic attracted 7.000 music
+            fans, while a concert by American The Weeknd was quickly sold out. </p>
+        <p> Saturday evening, Belgian
+            singer Antoine Hénaut and Mickey 3D and Feu! Chatterton from France performed at 'Tide'. While the Central
+            Dome welcomed Americansinger Brisa Roché and her latest album "Invisible". On Sunday, Bears of Legend and
+            Chelim entertained the crowd, although it was Grandgeorges who sold out the hall. At the Main Stage, Belgian
+            band La Smala & friends concluded the evening.</p>
+    </section>
 </article>
 
 <footer>
@@ -108,11 +100,11 @@
         <div class="column">
             <h4>Social media</h4>
             <ul>
-                <li><a href="/index.html">Facebook</a></li>
-                <li><a href="/journeys">Twitter</a></li>
-                <li><a href="/galleries">LinkedIn</a></li>
-                <li><a href="/about">Youtube</a></li>
-                <li><a href="/contact">Vimeo</a></li>
+                <li><a href="http://facebook.com">Facebook</a></li>
+                <li><a href="http://twitter.com">Twitter</a></li>
+                <li><a href="http://linkedin.com">LinkedIn</a></li>
+                <li><a href="http://youtube.com">Youtube</a></li>
+                <li><a href="http://vimeo.com">Vimeo</a></li>
             </ul>
         </div>
         <div class="column">
