--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/practicalinfo.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/practicalinfo.html
@@ -42,7 +42,7 @@
     <!-- Background banner, title text and buttons: -->
     <div class="infobanner">
         <h1 class="intro">Here is some practical info to get you started</h1>
-        <p class="slogan">Enjoy your stay at the renowned Coast of Freedom</p>
+        <p class="subintro">Enjoy your stay at the renowned Coast of Freedom</p>
 
         <!-- Buttons -->
         <button class="button button1">Buy your tickets!</button>
