--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/ticketinfo.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/ticketinfo.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tide</title>
-    <link rel="stylesheet" href="../css/basisstijlblad.css">
+    <title>Tide | Buy tickets</title>
     <link rel="icon" href="../images/icons/icon.png">
 
+    <!-- Stijlbladen: -->
+    <link rel="stylesheet" href="../css/basisstijlblad.css">
+    <link rel="stylesheet" href="../css/ticketformstijlblad.css">
+
     <!-- External Fonts: -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amaranth:400,700">
 </head>
 <body>
 
