--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tide</title>
+    <title>Tide | Lineup</title>
     <link rel="icon" href="../images/icons/icon.png">
 
     <!-- CSS: -->
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../css/lineupstijlblad.css">
 
     <!-- External Fonts: -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amaranth:400,700">
 </head>
 <body>
 
@@ -45,7 +45,7 @@
     <!-- Background banner, title text and buttons: -->
     <div class="lineupbanner">
         <h1 class="intro">Our line up for 2016</h1>
-        <p class="slogan">Plan your concerts in advance to get the
+        <p class="subintro">Plan your concerts in advance to get the
             best Tide experience!</p>
     </div>
 
