--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/flume.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/flume.html
@@ -42,7 +42,7 @@
     <!-- Background banner, title text and buttons: -->
     <div class="lineupbanner">
         <h1 class="intro">Our line up for 2016</h1>
-        <p class="slogan">Plan your concerts in advance to get the
+        <p class="subintro">Plan your concerts in advance to get the
             best Tide experience!</p>
 
         <!-- Buttons -->
