Added new content

--- a/HTML & CSS/INF103B_de_Ridder_Bryan/index.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/index.html
@@ -86,36 +86,34 @@
 </article>
 
 <footer>
-    <div class="footercolumns">
-        <div class="column">
-            <h4>Other stuff</h4>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./subpages/lineup.html">Line-up</a></li>
-                <li><a href="subpages/ticketinfo.html">Tickets</a></li>
-                <li><a href="./subpages/practicalinfo.html">Practical information</a></li>
-                <li><a href="./subpages/photos.html">Photos</a></li>
-            </ul>
-        </div>
-        <div class="column">
-            <h4>Social media</h4>
-            <ul>
-                <li><a href="http://facebook.com">Facebook</a></li>
-                <li><a href="http://twitter.com">Twitter</a></li>
-                <li><a href="http://linkedin.com">LinkedIn</a></li>
-                <li><a href="http://youtube.com">Youtube</a></li>
-                <li><a href="http://vimeo.com">Vimeo</a></li>
-            </ul>
-        </div>
-        <div class="column">
-            <h4>Contact us</h4>
-            <ul>
-                <li><a href="/index.html">&#9993; info@tidefestival.com</a></li>
-                <li><a href="/journeys">&#9742; (347) 927-5487</a></li>
-            </ul>
-        </div>
-        <p>&copy; 2011-2016 tide.com All Right Reserved.</p>
-    </div>
+    <section class="column">
+        <h4>Other stuff</h4>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./subpages/lineup.html">Line-up</a></li>
+            <li><a href="subpages/ticketinfo.html">Tickets</a></li>
+            <li><a href="./subpages/practicalinfo.html">Practical information</a></li>
+            <li><a href="./subpages/photos.html">Photos</a></li>
+        </ul>
+    </section>
+    <section class="column">
+        <h4>Social media</h4>
+        <ul>
+            <li><a href="http://facebook.com">Facebook</a></li>
+            <li><a href="http://twitter.com">Twitter</a></li>
+            <li><a href="http://linkedin.com">LinkedIn</a></li>
+            <li><a href="http://youtube.com">Youtube</a></li>
+            <li><a href="http://vimeo.com">Vimeo</a></li>
+        </ul>
+    </section>
+    <section class="column">
+        <h4>Contact us</h4>
+        <ul>
+            <li><a href="mailto:info@tidefestival.com">&#9993; info@tidefestival.com</a></li>
+            <li><a href="tel:347-927-5487">&#9742; (347) 927-5487</a></li>
+        </ul>
+    </section>
+    <p>&copy; 2011-2016 tide.com All Right Reserved.</p>
 </footer>
 </body>
 </html>
