--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/frahm.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/frahm.html
@@ -1,137 +1,136 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tide</title>
-    <link rel="stylesheet" href="../../css/basisstijlblad.css">
+    <title>Tide | Lineup</title>
     <link rel="icon" href="../../images/icons/icon.png">
 
+    <!-- CSS: -->
+    <link rel="stylesheet" href="../../css/basisstijlblad.css">
+    <link rel="stylesheet" href="../../css/lineupstijlblad.css">
+
     <!-- External Fonts: -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Amaranth:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amaranth:400,700">
 </head>
 <body>
 
-<header>
-    <!-- Navigation menu: -->
-    <nav>
-        <ul>
-            <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
-            <li><a class="hoverable active" href="../../subpages/lineup.html">Line-up &#9662;</a>
-                <!-- Dropdown menu: -->
-                <ul>
-                    <li><a class="hoverable" href="../../subpages/lineup.html#wednesday">Wednesday 13th</a></li>
-                    <li><a class="hoverable" href="../../subpages/lineup.html#thursday">Thursday 14th</a></li>
-                    <li><a class="hoverable" href="../../subpages/lineup.html#friday">Friday 15th</a></li>
-                </ul>
-            </li>
-            <li><a class="hoverable" href="../ticketinfo.html">Tickets &#9662;</a>
-                <!-- Dropdown menu: -->
-                <ul>
-                    <li><a class="hoverable" href="../ticketinfo.html">Ticket information</a></li>
-                    <li><a class="hoverable" href="../../subpages/buytickets.html">Buy tickets</a></li>
-                </ul>
-            </li>
-            <li><a class="hoverable" href="../../subpages/practicalinfo.html">Practical information</a></li>
-            <li><a class="hoverable" href="../../subpages/fotos.html">Photos</a></li>
-            <li class="navlogo"><a class="alogo" href="../../index.html">
-                <img src="../../images/icons/logo_magenta_xs.png" alt="logo"></a></li>
-        </ul>
-    </nav>
+<!-- Navigation menu: -->
+<nav>
+    <ul>
+        <li class="firstitem"><a class="hoverable" href="../../index.html">Home</a></li>
+        <li><a class="active" href="../lineupinfo.html">Line-up &#9662;</a>
+            <!-- Lineup dropdown menu: -->
+            <ul>
+                <li><a class="hoverable" href="../lineupinfo.html#wednesday">Wednesday 13th</a></li>
+                <li><a class="hoverable" href="../lineupinfo.html#thursday">Thursday 14th</a></li>
+                <li><a class="hoverable" href="../lineupinfo.html#friday">Friday 15th</a></li>
+            </ul>
+        </li>
+        <li><a class="hoverable" href="../ticketinfo.html">Tickets &#9662;</a>
+            <!-- Tickets dropdown menu: -->
+            <ul>
+                <li><a class="hoverable" href="../ticketinfo.html">Ticket information</a></li>
+                <li><a class="hoverable" href="../buytickets.html">Buy tickets</a></li>
+            </ul>
+        </li>
+        <li><a class="hoverable" href="../practicalinfo.html">Practical information</a></li>
+        <li><a class="hoverable" href="../fotos.html">Photos</a></li>
+        <li class="navlogo"><a class="alogo" href="../../index.html">
+            <img src="../../images/icons/logo_magenta_xs.png" alt="logo"></a></li>
+    </ul>
+</nav>
 
-    <!-- Background banner, title text and buttons: -->
-    <div class="lineupbanner">
-        <h1 class="intro">Our line up for 2016</h1>
-        <p class="subintro">Plan your concerts in advance to get the
-            best Tide experience!</p>
-
-        <!-- Buttons -->
+<!-- Background banner, title text and buttons: -->
+<header class="lineupbanner">
+    <h1 class="intro">Our line up for 2016</h1>
+    <p class="subintro">Plan your concerts in advance to get the
+        best Tide experience!
+    </p>
+    <!-- Buttons -->
+    <a href="../buytickets.html">
         <button class="button button1">Buy your tickets!</button>
-        <a href="../../subpages/lineup.html">
-            <button class="button button2">View our line-up!</button>
-        </a>
-    </div>
+    </a>
 </header>
 
-
+<!-- Content: -->
 <article>
-    <div class="artistcentered">
-        <section class="artistgallery">
-            <img class="artistimg" src="../../images/bands/frahm.jpg" alt="Nils Frahm" width="250" height="250">
-            <h3 class="artistheader">Nils Frahm</h3>
-            <h5 class="artistheader">Thursday, 13 june 2016</h5>
-            <h5 class="artistheader"><span class="lightblue">Beach Lounge</span> : 13.00 - 15.30</h5>
-        </section>
-    </div>
-
-    <p><b>Nils Frahm</b> (born 20 September 1982) is a German musician, composer and record producer based in
-        Berlin. He is known for combining classical and electronic music and for an unconventional approach to the
-        piano in which he mixes a grand piano, upright piano, Roland Juno-60, Rhodes piano, drum machine, and Moog
-        Taurus.</p>
-    <p>As well as his solo work, Frahm has released collaborations with such notable performers as Anne M&#252;ller,
-        &#211;lafur Arnalds, and F. S. Blumm. Together with Frederic Gmeiner and Sebastian Singwald he records and
-        performs as Nonkeen.</p>
-    <p></p>
-
-    <h2>Biography</h2>
-    <p>Frahm had an early introduction to music. His father, Klaus Frahm, was a photographer who also designed
-        covers for ECM Records. He grew up near Hamburg, where he learned the styles of the classical pianists as
-        well as contemporary composers.</p>
-    <p>Frahm's earlier solo piano works <i>Wintermusik</i> (2009) and <i>The Bells</i> (2009) gained him attention,
-        but it was his 2011 release <i>Felt</i> that was met with critical acclaim. It was his first studio album on
-        Erased Tapes, which has been releasing his music since. The album was followed by the solo synthesiser EP
-        <i>Juno</i> and by <i>Screws</i> (2012), recorded while Frahm was recovering from a thumb injury, and
-        offered as a free download to fans on his birthday. His follow-up to <i>Juno</i>, titled <i>Juno
-            Reworked</i> (2013), featured guest reworks by <a href='http://wikipedia.org/wiki/Luke_Abbott'
-        >Luke Abbott</a> and Chris Clark.</p>
-    <p>Frahm's album, <i>Spaces</i> (2013), was made of live recordings from various venues spanning over two years.
-    </p>
-    <p>In December 2013, Frahm released his first music book, <i>Eins</i>, published by Manners McDade.</p>
-    <p>In 2014, Frahm announced his new piano UNA CORDA, specially designed and made for him by David Klavins. The
-        piano weighs under 100&#160;kg and has one string per key, rather than the commonly used three strings. His
-        album <i>Solo</i> (2015), an improvisation single take without any overdubs, was later recorded on the
-        piano. It was one of the 19 records nominated for the IMPALA Album of the Year Award.</p>
-    <p>A condensed version of his single "More" was featured in the
-        <a href='http://wikipedia.org/wiki/Assassin'>Assassin's Creed Unity</a> unity gamescom trailer.</p>
-    <p>In February 2016 Nonkeen released <i>The Gamble</i>, followed by its companion release <i>Oddments of the
-        Gamble</i> in August 2016. Pitchfork.com described the album "as charmingly patched together and messy as it
-        is well-paced and dynamic". The material was recorded over eight years while the artwork was produced by
-        Frahm's father.</p>
-
-    <br><br>Source Wiki: <a href='https://en.wikipedia.org/wiki/Nils_Frahm'>Nils Frahm</a>
+    <figure class="artistgallery">
+        <img class="artistimg" src="../../images/bands/frahm.jpg" alt="Nils Frahm" width="250" height="250">
+        <h3 class="artistheader">Nils Frahm</h3>
+        <h5 class="artistheader">Thursday, 13 june 2016</h5>
+        <h5 class="artistheader"><span class="lightblue">Beach Lounge</span> : 13.00 - 15.30</h5>
+    </figure>
+    <section>
+        <p><b>Nils Frahm</b> (born 20 September 1982) is a German musician, composer and record producer based in
+            Berlin. He is known for combining classical and electronic music and for an unconventional approach to the
+            piano in which he mixes a grand piano, upright piano, Roland Juno-60, Rhodes piano, drum machine, and Moog
+            Taurus.</p>
+        <p>As well as his solo work, Frahm has released collaborations with such notable performers as Anne M&#252;ller,
+            &#211;lafur Arnalds, and F. S. Blumm. Together with Frederic Gmeiner and Sebastian Singwald he records and
+            performs as Nonkeen.</p>
+    </section>
+    <section>
+        <h2>Biography</h2>
+        <p>Frahm had an early introduction to music. His father, Klaus Frahm, was a photographer who also designed
+            covers for ECM Records. He grew up near Hamburg, where he learned the styles of the classical pianists as
+            well as contemporary composers.</p>
+        <p>Frahm's earlier solo piano works <i>Wintermusik</i> (2009) and <i>The Bells</i> (2009) gained him attention,
+            but it was his 2011 release <i>Felt</i> that was met with critical acclaim. It was his first studio album on
+            Erased Tapes, which has been releasing his music since. The album was followed by the solo synthesiser EP
+            <i>Juno</i> and by <i>Screws</i> (2012), recorded while Frahm was recovering from a thumb injury, and
+            offered as a free download to fans on his birthday. His follow-up to <i>Juno</i>, titled <i>Juno
+                Reworked</i> (2013), featured guest reworks by <a href='http://wikipedia.org/wiki/Luke_Abbott'
+            >Luke Abbott</a> and Chris Clark.</p>
+        <p>Frahm's album, <i>Spaces</i> (2013), was made of live recordings from various venues spanning over two years.
+        </p>
+        <p>In December 2013, Frahm released his first music book, <i>Eins</i>, published by Manners McDade.</p>
+        <p>In 2014, Frahm announced his new piano UNA CORDA, specially designed and made for him by David Klavins. The
+            piano weighs under 100&#160;kg and has one string per key, rather than the commonly used three strings. His
+            album <i>Solo</i> (2015), an improvisation single take without any overdubs, was later recorded on the
+            piano. It was one of the 19 records nominated for the IMPALA Album of the Year Award.</p>
+        <p>A condensed version of his single "More" was featured in the
+            <a href='http://wikipedia.org/wiki/Assassin'>Assassin's Creed Unity</a> unity gamescom trailer.</p>
+        <p>In February 2016 Nonkeen released <i>The Gamble</i>, followed by its companion release <i>Oddments of the
+            Gamble</i> in August 2016. Pitchfork.com described the album "as charmingly patched together and messy as it
+            is well-paced and dynamic". The material was recorded over eight years while the artwork was produced by
+            Frahm's father.</p>
+    </section>
+    <cite>
+        Source Wiki: <a href='https://en.wikipedia.org/wiki/Nils_Frahm'>Nils Frahm</a>
+    </cite>
 </article>
 
+<!-- Footer with 3 columns: -->
 <footer>
-    <div class="footercolumns">
-        <div class="column">
-            <h4>Other stuff</h4>
-            <ul>
-                <li><a href="../../index.html">Home</a></li>
-                <li><a href="../../subpages/lineup.html">Line-up</a></li>
-                <li><a href="../ticketinfo.html">Tickets</a></li>
-                <li><a href="../../subpages/practicalinfo.html">Practical information</a></li>
-                <li><a href="../../subpages/photos.html">Photos</a></li>
-            </ul>
-        </div>
-        <div class="column">
-            <h4>Social media</h4>
-            <ul>
-                <li><a href="/index.html">Facebook</a></li>
-                <li><a href="/journeys">Twitter</a></li>
-                <li><a href="/galleries">LinkedIn</a></li>
-                <li><a href="/about">Youtube</a></li>
-                <li><a href="/contact">Vimeo</a></li>
-            </ul>
-        </div>
-        <div class="column">
-            <h4>Contact us</h4>
-            <ul>
-                <li><a href="/index.html">&#9993; info@tidefestival.com</a></li>
-                <li><a href="/journeys">&#9742; (347) 927-5487</a></li>
-            </ul>
-        </div>
-        <p>&copy; 2011-2016 tide.com All Right Reserved.</p>
-    </div>
+    <section class="column">
+        <h4>Other stuff</h4>
+        <ul>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../lineupinfo.html">Line-up</a></li>
+            <li><a href="../ticketinfo.html">Tickets</a></li>
+            <li><a href="../practicalinfo.html">Practical information</a></li>
+            <li><a href="../photos.html">Photos</a></li>
+        </ul>
+    </section>
+    <section class="column">
+        <h4>Social media</h4>
+        <ul>
+            <li><a href="http://facebook.com">Facebook</a></li>
+            <li><a href="http://twitter.com">Twitter</a></li>
+            <li><a href="http://linkedin.com">LinkedIn</a></li>
+            <li><a href="http://youtube.com">Youtube</a></li>
+            <li><a href="http://vimeo.com">Vimeo</a></li>
+        </ul>
+    </section>
+    <section class="column">
+        <h4>Contact us</h4>
+        <ul>
+            <li><a href="mailto:info@tidefestival.com">&#9993; info@tidefestival.com</a></li>
+            <li><a href="tel:347-927-5487">&#9742; (347) 927-5487</a></li>
+        </ul>
+    </section>
+    <p>&copy; 2011-2016 tide.com All Right Reserved.</p>
 </footer>
 </body>
 </html>
