--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/practicalinfo.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/practicalinfo.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tide</title>
-    <link rel="stylesheet" href="../css/basisstijlblad.css">
+    <title>Tide | Practical info</title>
     <link rel="icon" href="../images/icons/icon.png">
+
+    <!-- CSS: -->
+    <link rel="stylesheet" href="../css/basisstijlblad.css">
 
     <!-- External Fonts: -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600" rel="stylesheet">
@@ -12,73 +14,84 @@
 </head>
 <body>
 
-<header>
-    <!-- Navigation menu: -->
-    <nav>
-        <ul>
-            <li class="firstitem"><a class="hoverable" href="../index.html">Home</a></li>
-            <li><a class="hoverable" href="../subpages/lineup.html">Line-up &#9662;</a>
-                <!-- Dropdown menu: -->
-                <ul>
-                    <li><a class="hoverable" href="../subpages/lineup.html#wednesday">Wednesday 13th</a></li>
-                    <li><a class="hoverable" href="../subpages/lineup.html#thursday">Thursday 14th</a></li>
-                    <li><a class="hoverable" href="../subpages/lineup.html#friday">Friday 15th</a></li>
-                </ul>
-            </li>
-            <li><a class="hoverable" href="ticketinfo.html">Tickets &#9662;</a>
-                <!-- Dropdown menu: -->
-                <ul>
-                    <li><a class="hoverable" href="ticketinfo.html">Ticket information</a></li>
-                    <li><a class="hoverable" href="../subpages/buytickets.html">Buy tickets</a></li>
-                </ul>
-            </li>
-            <li><a class="hoverable active" href="../subpages/practicalinfo.html">Practical information</a></li>
-            <li><a class="hoverable" href="../subpages/fotos.html">Photos</a></li>
-            <li class="navlogo"><a class="alogo" href="../index.html">
-                <img src="../images/icons/logo_magenta_xs.png" alt="logo"></a></li>
-        </ul>
-    </nav>
+<!-- Navigation menu: -->
+<nav>
+    <ul>
+        <li class="firstitem"><a class="hoverable" href="../index.html">Home</a></li>
+        <li><a class="hoverable" href="./lineupinfo.html">Line-up &#9662;</a>
+            <!-- Lineup dropdown menu: -->
+            <ul>
+                <li><a class="hoverable" href="./lineupinfo.html#wednesday">Wednesday 13th</a></li>
+                <li><a class="hoverable" href="./lineupinfo.html#thursday">Thursday 14th</a></li>
+                <li><a class="hoverable" href="./lineupinfo.html#friday">Friday 15th</a></li>
+            </ul>
+        </li>
+        <li><a class="hoverable" href="./ticketinfo.html">Tickets &#9662;</a>
+            <!-- Tickets dropdown menu: -->
+            <ul>
+                <li><a class="hoverable" href="./ticketinfo.html">Ticket information</a></li>
+                <li><a class="hoverable" href="./buytickets.html">Buy tickets</a></li>
+            </ul>
+        </li>
+        <li><a class="active" href="./practicalinfo.html">Practical information</a></li>
+        <li><a class="hoverable" href="./fotos.html">Photos</a></li>
+        <li class="navlogo"><a class="alogo" href="../index.html">
+            <img src="../images/icons/logo_magenta_xs.png" alt="logo"></a></li>
+    </ul>
+</nav>
 
-    <!-- Background banner, title text and buttons: -->
-    <div class="infobanner">
-        <h1 class="intro">Here is some practical info to get you started</h1>
-        <p class="subintro">Enjoy your stay at the renowned Coast of Freedom</p>
+<!-- Background banner, title text and buttons: -->
+<header>
+    <section class="infobanner">
+        <h1 class="intro">Practical information</h1>
 
         <!-- Buttons -->
-        <button class="button button1">Buy your tickets!</button>
-        <a href="../subpages/lineup.html">
+        <a href="./buytickets.html">
+            <button class="button button1">Buy your tickets!</button>
+        </a>
+        <a href="lineupinfo.html">
             <button class="button button2">View our line-up!</button>
         </a>
-    </div>
-
+    </section>
 </header>
 
-
+<!-- Content: -->
 <article>
-    <h2>Before you go, here are some things you might want to know...</h2>
-    <h5>You can <span class="lightblue">thank us</span> later, or ask us a question on our <span
-            class="lightblue">facebook page</span>.</h5>
-    <h3>Preparing for the trip</h3>
-    <p> Please prepare for the trip in advance, it is very important that you are well prepared before departing on your
-        Tide journey. Every year people lose their belongings, forget some crucial elements that are key for your own
-        safety and well-being during your time at Tide. This entire page is dedicated towards helping you achieve the
-        best possible Tide experience. For example, a lot of people each year forget to bring a large bottle of water
-        on their way to the festival. If you're planning on coming to Tide and the travel time is more than 3 hours,
-        one bottle of water is not enough! So take this advice from us: For each hour of time traveled bring 0.5 liters
-        of waters. This way you can never get exhausted or dehydrated.
-    </p>
-    <h3>Here's a nice checklist we got for you</h3>
-    <ul class="paragraphlist">
-        <li>Coffee</li>
-        <li>Tea</li>
-        <li>Milk</li>
-        <li>Coffee</li>
-        <li>Tea</li>
-        <li>Milk</li>
-        <li>Coffee</li>
-        <li>Tea</li>
-        <li>Milk</li>
-    </ul>
+    <section>
+        <h2>Before you go, here are some things you might want to know...</h2>
+        <h3>Preparing for the trip</h3>
+        <h4>You can <span class="lightblue">thank us</span> later, or ask us a question on our
+            <a href="http://facebook.com">facebook</a> page.</h4>
+        <p>Door het creationisme wordt veel gewerkt met het begrip ‘Baramin’. Dat klinkt heel indrukwekkend, maar wat
+            houdt dat precies in. Daarnaast is de vraag, hoe zit het met de ark van Noach? ‘Van alle dieren moet je er
+            twee in de ark brengen, om er voor te zorgen, dat die met jou in leven blijven. Een mannetje en wijfje
+            moeten het zijn. Van alle soorten vogels, van alle soorten vee en van alles wat op de aardbodem rondkruipt,
+            zullen er twee naar je toekomen; die zullen in leven blijven’ (Gen. 6 : 20). En in Gen. 7 : 2 en 3 staat
+            zelfs: ‘Van alle reine dieren zeven mannetjes en hun wijfjes, van de onreine twee, een mannetje en wijfje,
+            en van de vogels weer zeven mannetjes en wijfjes, om hun voortbestaan op aarde veilig te stellen.’ Je kunt
+            je afvragen, past dat allemaal in de ark, als er ook nog een hoeveelheid eten meegenomen moet worden? Wat
+            wordt dan verstaan onder ‘soort’. Zijn dat alle huidige biologische soorten, zoals diverse soorten
+            katachtigen, hondachtigen? Of worden daar families mee bedoeld. Het biologische soortbegrip was in de
+            oudheid nog niet bekend. Creationisten werken nogal eens met het begrip ‘baramin’, een samenstelling van
+            twee woorden afkomstig uit het Hebreeuws: ‘bara’ is scheppen, ‘min’ is ‘aard’, afkomstig uit Genesis 1: God
+            schiep alle dieren naar hun aard. Op de site https://arkencounter.com. wordt het begrip ‘baramin’ breder
+            omschreven, dan het biologische soort-begrip: Op de site staat het volgende te lezen:
+        </p>
+    </section>
+    <section>
+        <h3>Here's a nice checklist we got for you</h3>
+        <ul class="paragraphlist">
+            <li>Coffee</li>
+            <li>Tea</li>
+            <li>Milk</li>
+            <li>Coffee</li>
+            <li>Tea</li>
+            <li>Milk</li>
+            <li>Coffee</li>
+            <li>Tea</li>
+            <li>Milk</li>
+        </ul>
+    </section>
     <h3>Once you've arrived at the camp site</h3>
     <p> Door het creationisme wordt veel gewerkt met het begrip ‘Baramin’. Dat klinkt heel indrukwekkend, maar wat houdt
         dat precies in. Daarnaast is de vraag, hoe zit het met de ark van Noach? ‘Van alle dieren moet je er twee in de
@@ -96,8 +109,8 @@
         lezen:
     </p>
     <h3>Getting through the week without breaking a leg</h3>
-    <h5>You can <span class="lightblue">thank us</span> later, or ask us a question on our <span
-            class="lightblue">facebook page</span>.</h5>
+    <h4>You can <span class="lightblue">thank us</span> later, or ask us a question on our <span
+            class="lightblue">facebook page</span>.</h4>
     <p> Door het creationisme wordt veel gewerkt met het begrip ‘Baramin’. Dat klinkt heel indrukwekkend, maar wat houdt
         dat precies in. Daarnaast is de vraag, hoe zit het met de ark van Noach? ‘Van alle dieren moet je er twee in de
         ark brengen, om er voor te zorgen, dat die met jou in leven blijven. Een mannetje en wijfje moeten het zijn. Van
@@ -114,8 +127,8 @@
         lezen:
     </p>
     <h3>Getting back home safely, just in case</h3>
-    <h5>You can <span class="lightblue">thank us</span> later, or ask us a question on our <span
-            class="lightblue">facebook page</span>.</h5>
+    <h4>You can <span class="lightblue">thank us</span> later, or ask us a question on our <span
+            class="lightblue">facebook page</span>.</h4>
     <p> Door het creationisme wordt veel gewerkt met het begrip ‘Baramin’. Dat klinkt heel indrukwekkend, maar wat houdt
         dat precies in. Daarnaast is de vraag, hoe zit het met de ark van Noach? ‘Van alle dieren moet je er twee in de
         ark brengen, om er voor te zorgen, dat die met jou in leven blijven. Een mannetje en wijfje moeten het zijn. Van
@@ -131,41 +144,38 @@
         wordt het begrip ‘baramin’ breder omschreven, dan het biologische soort-begrip: Op de site staat het volgende te
         lezen:
     </p>
-
-
 </article>
 
+<!-- Footer with 3 columns: -->
 <footer>
-    <div class="footercolumns">
-        <div class="column">
-            <h4>Other stuff</h4>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../subpages/lineup.html">Line-up</a></li>
-                <li><a href="ticketinfo.html">Tickets</a></li>
-                <li><a href="../subpages/practicalinfo.html">Practical information</a></li>
-                <li><a href="../subpages/photos.html">Photos</a></li>
-            </ul>
-        </div>
-        <div class="column">
-            <h4>Social media</h4>
-            <ul>
-                <li><a href="/index.html">Facebook</a></li>
-                <li><a href="/journeys">Twitter</a></li>
-                <li><a href="/galleries">LinkedIn</a></li>
-                <li><a href="/about">Youtube</a></li>
-                <li><a href="/contact">Vimeo</a></li>
-            </ul>
-        </div>
-        <div class="column">
-            <h4>Contact us</h4>
-            <ul>
-                <li><a href="/index.html">&#9993; info@tidefestival.com</a></li>
-                <li><a href="/journeys">&#9742; (347) 927-5487</a></li>
-            </ul>
-        </div>
-        <p>&copy; 2011-2016 tide.com All Right Reserved.</p>
-    </div>
+    <section class="column">
+        <h4>Other stuff</h4>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="lineupinfo.html">Line-up</a></li>
+            <li><a href="../subpages/ticketinfo.html">Tickets</a></li>
+            <li><a href="../subpages/practicalinfo.html">Practical information</a></li>
+            <li><a href="../subpages/photos.html">Photos</a></li>
+        </ul>
+    </section>
+    <section class="column">
+        <h4>Social media</h4>
+        <ul>
+            <li><a href="http://facebook.com">Facebook</a></li>
+            <li><a href="http://twitter.com">Twitter</a></li>
+            <li><a href="http://linkedin.com">LinkedIn</a></li>
+            <li><a href="http://youtube.com">Youtube</a></li>
+            <li><a href="http://vimeo.com">Vimeo</a></li>
+        </ul>
+    </section>
+    <section class="column">
+        <h4>Contact us</h4>
+        <ul>
+            <li><a href="mailto:info@tidefestival.com">&#9993; info@tidefestival.com</a></li>
+            <li><a href="tel:347-927-5487">&#9742; (347) 927-5487</a></li>
+        </ul>
+    </section>
+    <p>&copy; 2011-2016 tide.com All Right Reserved.</p>
 </footer>
 </body>
 </html>
